--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=Prince%4001
+POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=7000
 POSTGRES_DB=Movie_Reviewer
